--- a/DiageoMDMWeb/src/main/webapp/admin/subcanal/consultarSubCanal.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/subcanal/consultarSubCanal.xhtml
@@ -50,14 +50,27 @@
                                 <h:panelGrid columns="2" style="width: 100%">
                                     <h:outputLabel value="#{msg.sub_can_nombre}" style="width: 30%"/>
                                     <p:inputText id="itNombre" value="#{consultarSubChannel.nombreSubChannel}" required="true" label="#{msg.sub_can_nombre}" style="width: 70%"/>
-
-                                    <h:outputLabel value="#{msg.athena_code}" style="width: 30%"/>
-                                    <p:inputText id="itAthenaCode" value="#{consultarSubChannel.athenaCode}" required="true" label="#{msg.athena_code}" style="width: 70%" readonly="true"/>                             
-
                                     <h:outputLabel value="#{msg.can_canal}" style="width: 30%"/>
                                     <p:selectOneMenu value="#{consultarSubChannel.channel}" converter="channelConverter" style="width: 67%">
                                         <f:selectItems value="#{consultarSubChannel.listaChannel}" var="channel" itemLabel="#{channel.nameChannel}"/>
                                     </p:selectOneMenu>
+
+                                    <h:outputLabel value="#{msg.athena_code}" style="width: 30%"/>
+                                    <p:inputText id="itAthenaCode" value="#{consultarSubChannel.athenaCode}" label="#{msg.athena_code}" style="width: 70%" readonly="true"/>                             
+
+                                    <h:outputLabel value="#{msg.code_meico}"/>
+                                    <p:inputText value="#{consultarSubChannel.codeMeico}" style="width: 70%" readonly="true"/>
+
+                                    <h:outputLabel value="#{msg.code_altipal}"/>
+                                    <p:inputText value="#{consultarSubChannel.codeAltipal}" style="width: 70%" readonly="true"/>
+
+                                    <h:outputLabel value="#{msg.code_dialsa}"/>
+                                    <p:inputText value="#{consultarSubChannel.codeDialsa}" style="width: 70%" readonly="true"/>
+
+                                    <h:outputLabel value="#{msg.code_chain}"/>
+                                    <p:inputText value="#{consultarSubChannel.codeChain}" style="width: 70%" readonly="true"/>
+
+
                                     <h:outputLabel value="#{msg.estado}"/>
                                     <p:selectBooleanCheckbox label="#{msg.usu_activo}" value="#{consultarSubChannel.estado}"/>
                                 </h:panelGrid>
