--- a/DiageoMDMWeb/src/main/webapp/outlet/crearOutlet.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/outlet/crearOutlet.xhtml
@@ -211,7 +211,7 @@
                                 <h:outputLabel value="#{msg.out_barrio}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
                                 <h:panelGroup>
                                     <p:inputText id="itNeighborhood" value="#{outletCrearBean.neighborhood}" label="#{msg.out_barrio}"
-                                                 required="true"/>
+                                                 required="false"/>
                                     <p:message for="itNeighborhood"/>
                                 </h:panelGroup>
                                 <h:outputLabel value="#{msg.out_direccion}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
