--- a/DiageoMDMWeb/src/main/webapp/outlet/createChain.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/outlet/createChain.xhtml
@@ -156,7 +156,7 @@
                                 </p:selectOneMenu>
                                 <h:outputLabel value="#{msg.out_barrio}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
                                 <h:panelGroup>
-                                    <p:inputText id="itNeighborhood" value="#{createChainBean.neighborhood}" required="true" label="#{msg.out_barrio}"/>
+                                    <p:inputText id="itNeighborhood" value="#{createChainBean.neighborhood}" required="false" label="#{msg.out_barrio}"/>
                                     <p:message for="itNeighborhood"/>
                                 </h:panelGroup>
                                 <h:outputLabel value="#{msg.out_direccion}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
