--- a/DiageoMDMWeb/src/main/webapp/outlet/searchChain.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/outlet/searchChain.xhtml
@@ -244,7 +244,7 @@
                                         <h:outputLabel value="#{msg.out_barrio}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
                                         <h:panelGroup>
                                             <p:inputText id="itNeighborhood" value="#{chainSearchBean.neighborhood}" disabled="#{chainSearchBean.disabledFields}" 
-                                                         required="true" label="#{msg.out_barrio}"/>
+                                                         required="false" label="#{msg.out_barrio}"/>
                                             <p:message for="itNeighborhood"/>
                                         </h:panelGroup>
                                         <h:outputLabel value="#{msg.out_direccion}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
